Fix: Virtual keyboard hiding input field on mobile

--- a/public/style.css
+++ b/public/style.css
@@ -176,11 +176,4 @@
         font-size: 10px !important;
     }
 }
-#terminal-container {
-    padding-bottom: 50px;
-}
-
-#virtual-keyboard {
-    padding-bottom: 50px;
-}
 
